Fixed issue with spacing in Quote/Order modules and updated CustomForms to remove min-height added to empty divs - Resolves #270

--- a/src/RentalWorksWeb/theme/rentalworks.css
+++ b/src/RentalWorksWeb/theme/rentalworks.css
@@ -626,7 +626,11 @@ html.theme-material [data-name="AuditHistoryGrid"] tbody tr.selected td ul:not(.
     border: 1px solid lightblue;
 }
 
-#designerContent [data-control="FwFormField"]{
+#designerContent div.emptyContainer {
+    min-height:50px;
+}
+
+#designerContent [data-control="FwFormField"] {
     border: 1px solid #dcdcdc;
 }
 
